Добавление необходимых пакетов, вёрстка стартовой страницы

--- a/client/src/styles/global/common.less
+++ b/client/src/styles/global/common.less
@@ -3,9 +3,25 @@
   padding: 0;
 }
 
+html,
 body {
-  padding: 40px;
+  height: 100%;
+}
+
+body {
+  color: @black;
+  @font-family: @font1;
+  font-style: normal;
+  font-weight: 400;
   font-size: 16px;
+  line-height: 1.362;
+  overflow-x: hidden;
+}
+
+a {
+  outline: none;
+  color: @white;
+  text-decoration: none;
 }
 
 button {
