--- a/client/src/styles/variables.less
+++ b/client/src/styles/variables.less
@@ -1,2 +1,59 @@
+/* Цветовая палитра */
 @black: #000;
 @white: #fff;
+@lavender: #ececf4;
+@light_blue: #e8f0fe;
+@light_steel_blue: #c2c1db;
+@gray: fade(@black, 60%);
+@light_gray: #d1d4d3;
+@deep_purple: #3c388d;
+
+/* Шрифты */
+@font1: "Open Sans", "sans-serif";
+@font2: "Lora", "sans-serif";
+
+/* Медиавыражения */
+@bw400: ~"(max-width: 399px)";
+@w400: ~"(min-width: 400px)";
+
+@bw450: ~"(max-width: 449px)";
+@w450: ~"(min-width: 450px)";
+
+@bw500: ~"(max-width: 499px)";
+@w500: ~"(min-width: 500px)";
+
+@bw550: ~"(max-width: 549px)";
+@w550: ~"(min-width: 550px)";
+
+@bw560: ~"(max-width: 559px)";
+@w560: ~"(min-width: 560px)";
+
+@bw600: ~"(max-width: 599px)";
+@w600: ~"(min-width: 600px)";
+
+@bw650: ~"(max-width: 649px)";
+@w650: ~"(min-width: 650px)";
+
+@bw720: ~"(max-width: 719px)";
+@w720: ~"(min-width: 720px)";
+
+@bw768: ~"(max-width: 767px)";
+@w768: ~"(min-width: 768px)";
+
+@bw960: ~"(max-width: 959px)";
+@w960: ~"(min-width: 960px)";
+
+@bw1020: ~"(max-width: 1019px)";
+@w1020: ~"(min-width: 1020px)";
+
+@bw1100: ~"(max-width: 1099px)";
+@w1100: ~"(min-width: 1100px)";
+
+@bw1170: ~"(max-width: 1169px)";
+@w1170: ~"(min-width: 1170px)";
+
+@bw1340: ~"(max-width: 1339px)";
+@w1340: ~"(min-width: 1340px)";
+
+@bw1660: ~"(max-width: 1659px)";
+@w1660: ~"(min-width: 1660px)";
