--- a/client/src/styles/variables.less
+++ b/client/src/styles/variables.less
@@ -7,6 +7,7 @@
 @gray: fade(@black, 60%);
 @light_gray: #d1d4d3;
 @deep_purple: #3c388d;
+@dark_orchid: #9535C0;
 
 /* Шрифты */
 @font1: "Open Sans", "sans-serif";
