--- a/client/src/styles/mixins.less
+++ b/client/src/styles/mixins.less
@@ -5,3 +5,26 @@
   margin: 0 auto;
   padding: 0 20px;
 }
+
+.responsive-parent(@w: 100%; @after-pt) {
+  position: relative;
+  display: block;
+  width: @w;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    padding-top: @after-pt;
+  }
+}
+
+.responsive-child {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
