Обновлен внешний вид страницы авторизации (без адаптива)

--- a/client/src/styles/blocks/layout.less
+++ b/client/src/styles/blocks/layout.less
@@ -1,14 +1,14 @@
 .layout {
   min-height: 100vh;
-  padding-top: 60px;
+  padding-top: 124px;
 
-  @media @bw1340 {
-    padding-top: 50px;
-  }
+  // @media @bw1340 {
+  //   padding-top: 50px;
+  // }
 
-  @media @bw768 {
-    padding-top: 40px;
-  }
+  // @media @bw768 {
+  //   padding-top: 40px;
+  // }
 
   &__main {
     display: flex;
