--- a/client/src/styles/mixins.less
+++ b/client/src/styles/mixins.less
@@ -1,9 +1,9 @@
 .container() {
   box-sizing: border-box;
-  max-width: 1380px;
+  max-width: 1440px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 50px 0 30px;
 }
 
 .responsive-parent(@w: 100%; @after-pt) {
