Добавлен адаптив к странице авторизации

--- a/client/src/styles/blocks/layout.less
+++ b/client/src/styles/blocks/layout.less
@@ -2,13 +2,13 @@
   min-height: 100vh;
   padding-top: 124px;
 
-  // @media @bw1340 {
-  //   padding-top: 50px;
-  // }
+  @media @bw1340 {
+    padding-top: 100px;
+  }
 
-  // @media @bw768 {
-  //   padding-top: 40px;
-  // }
+  @media @bw768 {
+    padding-top: 80px;
+  }
 
   &__main {
     display: flex;
