--- a/client/src/styles/global/common.less
+++ b/client/src/styles/global/common.less
@@ -17,8 +17,12 @@ body {
   line-height: 1.362;
   overflow-x: hidden;
 
+  @media @bw1340 {
+    font-size: 18px;
+  }
+
   @media @bw768 {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
