--- a/client/src/styles/mixins.less
+++ b/client/src/styles/mixins.less
@@ -3,7 +3,7 @@
   max-width: 1440px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 50px 0 30px;
+  padding: 0 30px;
 }
 
 .responsive-parent(@w: 100%; @after-pt) {
