--- a/client/src/styles/mixins.less
+++ b/client/src/styles/mixins.less
@@ -4,6 +4,10 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 30px;
+
+  @media @bw1020 {
+    padding: 0 20px;
+  }
 }
 
 .layout-container {
@@ -42,4 +46,32 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.show-nav {
+  body {
+    @media @bw1020 {
+      overflow: hidden;
+    }
+  }
+
+  .page-header__nav {
+    @media @bw1020 {
+      transform: translateX(0);
+    }
+  }
+
+  .page-header__nav-toggle {
+    border-radius: 50%;
+    background-color: @dark_orchid;
+
+    &::before {
+      transform: translate(0px, 10px) rotate(45deg);
+      box-shadow: none;
+    }
+    
+    &::after {
+      transform: translate(0px, -10px) rotate(-45deg);
+    }
+  }
 }
